# kynd

./: .boilersync  .gitignore  multi.json
.cursor/rules/: repo-directories.mdc
.github/workflows/: deploy.yml
ai-meditation-starter-kit-api/: pyproject.toml
ai-meditation-starter-kit-api/ai_meditation_starter_kit_api/meditations/: models.py  serializers.py  views.py
ai-meditation-starter-kit-api/ai_meditation_starter_kit_api/meditations/migrations/: 0004_meditation_description_meditation_error_message_and_more.py
ai-meditation-starter-kit-api/ai_meditation_starter_kit_api/meditations/tasks/: generate_meditation_assets.py
ai-meditation-starter-kit-ios/: .boilersync  Project.swift  README.md
ai-meditation-starter-kit-ios/AiMeditation/: AiMeditationApp.swift  Constants.swift  Constants.swift.starter  HomeView.swift  HomeView.swift.starter
ai-meditation-starter-kit-ios/AiMeditation/Meditations/: MeditationAPIClient.swift  MeditationLibraryViewModel.swift  MeditationModels.swift
ai-meditation-starter-kit-ios/AiMeditationTests/: AiMeditationTests.swift
ai-meditation-starter-kit-ios/AiMeditationUITests/: AiMeditationUITests.swift  AiMeditationUITestsLaunchTests.swift
ai-meditation-starter-kit-ios/Tuist/: Package.resolved  Package.swift
ai-meditation-starter-kit-react/: package-lock.json  package.json  vite.config.ts
ai-meditation-starter-kit-react/src/pages/: Dashboard.test.tsx  Dashboard.tsx
ios-shared/: Package.swift
meditations/: basic-iembrace-wav-meditation.json
web/: requirements.txt
web/users/: models.py
(+10 files in other folders)
